--- a/index.html
+++ b/index.html
@@ -103,7 +103,17 @@
                         <div class="navbar-nav py-0">
                             <a href="index.html" class="nav-item nav-link active">Home</a>
                             <a href="about.html" class="nav-item nav-link">About</a>
-                            <a href="course.html" class="nav-item nav-link">Services</a>
+
+                        <div class="nav-item dropdown">
+                            <a href="course.html" class="nav-link dropdown-toggle" data-toggle="dropdown">Services</a>
+                            <div class="dropdown-menu rounded-0 m-0">
+                                <a href="#" class="dropdown-item">Education</a>
+                                
+                                <a href="#" class="dropdown-item">Visa</a>
+                                <a href="#" class="dropdown-item">Tours & Travels</a>
+                            </div>
+                        </div>
+                            
                             <a href="teacher.html" class="nav-item nav-link">Teachers</a>
                             <div class="nav-item dropdown">
                                 <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Blog</a>
