--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                                     data-toggle="dropdown">Services</a>
                                 <div class="dropdown-menu rounded-0 m-0">
                                     <div class="nav-item dropdown">
-                                        <a href="#" class="nav-link dropdown" data-toggle="dropdown">Education/a>
+                                        <a href="#" class="nav-link dropdown" data-toggle="dropdown">Education</a>
                                         <div class="dropdown-menu rounded-0 m-0">
                                             <a href="" class="dropdown-item">Study</a>
                                             <a href="" class="dropdown-item">Training</a>
