--- a/about.html
+++ b/about.html
@@ -97,7 +97,7 @@
 
 
     <!-- Header Start -->
-    <div class="container-fluid page-header" style="margin-bottom: 90px;">
+    <div class="container-fluid page-header-about" style="margin-bottom: 90px;">
         <div class="container">
             <div class="d-flex flex-column justify-content-center" style="min-height: 300px">
                 <h3 class="display-4 text-white text-uppercase">About</h3>
@@ -106,7 +106,7 @@
                     <i class="fa fa-angle-double-right pt-1 px-3"></i>
                     <p class="m-0 text-uppercase">About</p>
                 </div>
-            </div>
+            </div> 
         </div>
     </div>
     <!-- Header End -->
