--- a/index.html
+++ b/index.html
@@ -83,15 +83,22 @@
                                 <a href="services.html" class="nav-link dropdown-toggle"
                                     data-toggle="dropdown">Services</a>
                                 <div class="dropdown-menu rounded-0 m-0">
-                                    <div class="nav-item dropdown">
-                                        <a href="#" class="nav-link dropdown" data-toggle="dropdown">Education</a>
-                                        <div class="dropdown-menu rounded-0 m-0">
-                                            <a href="study.html" class="dropdown-item">Study</a>
-                                            <a href="training.html" class="dropdown-item">Training</a>
-                                        </div>
+                                    <!-- <div class="nav-item dropdown"> -->
+                                    <a href="#" class="dropdown-item" data-toggle="dropdown">Education</a>
+                                    <div class="dropdown-menu position-relative bg-secondary border-0 rounded-0 w-100 m-0">
+                                        <a href="#" class="dropdown-item">Study</a>
+                                        <a href="#" class="dropdown-item">Training</a>
                                     </div>
-                                    <a href="single.html" class="dropdown-item">Visas</a>
-                                    <a href="tours.html" class="dropdown-item">Tours & Travells</a>
+                                    <!-- </div> -->
+                                    
+                                        <a href="#" class="dropdown-item" data-toggle="dropdown">Visas</a>
+                                        <div class="dropdown-menu position-relative bg-secondary border-0 rounded-0 w-100 m-0">
+                                            <a href="study.html" class="dropdown-item">Visit& Tourst Visa</a>
+                                            <a href="training.html" class="dropdown-item">Work & Residence Visa</a>
+                                            <a href="training.html" class="dropdown-item">Business Visa</a>
+                                        </div>
+                                    
+                                    <a href="#" class="dropdown-item">Tours & Travells</a>
                                 </div>
                             </div>
 
@@ -178,13 +185,14 @@
                         studying abroad. With over a decade of experience in the education industry, Hykin's overseas
                         education has helped numerous students achieve their dreams of studying in top universities
                         around the world. <br><br>
-                        One of the main advantages of choosing Hykin overseas education is the personalized approach
+                        <!-- One of the main advantages of choosing Hykin overseas education is the personalized approach
                         they take with each student. The team of experienced counsellors works closely with students to
                         understand their academic background, interests, and aspirations. Based on this information,
                         they provide personalized advice on which universities to apply to, which courses to take, and
-                        even guide scholarships and financial aid.....
+                        even guide scholarships and financial aid..... -->
                     </p>
-                    <a href="about.html" class="btn btn-primary py-md-2 px-md-4 font-weight-semi-bold mt-2">Learn More</a>
+                    <a href="about.html" class="btn btn-primary py-md-2 px-md-4 font-weight-semi-bold mt-2">Learn
+                        More</a>
                 </div>
             </div>
         </div>
