--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
                                     <!-- <div class="nav-item dropdown"> -->
                                     <a href="#" class="dropdown-item" data-toggle="dropdown">Education</a>
                                     <div class="dropdown-menu position-relative bg-secondary border-0 rounded-0 w-100 m-0">
-                                        <a href="#" class="dropdown-item">Study</a>
-                                        <a href="#" class="dropdown-item">Training</a>
+                                        <a href="study.html" class="dropdown-item">Study</a>
+                                        <a href="training.html" class="dropdown-item">Training</a>
                                     </div>
                                     <!-- </div> -->
                                     
