--- a/index.html
+++ b/index.html
@@ -93,6 +93,12 @@
                                     
                                         <a href="#" class="dropdown-item" data-toggle="dropdown">Visas</a>
                                         <div class="dropdown-menu position-relative bg-secondary border-0 rounded-0 w-100 m-0">
+                                            <a href="#" class="dropdown-item">Education Visa</a>
+                                            <a href="#" class="dropdown-item">Business Visa</a>
+                                            <a href="#" class="dropdown-item">Tours & Travells Visa</a>
+
+                                        </div>
+                                        <div class="dropdown-menu position-relative bg-secondary border-0 rounded-0 w-100 m-0">
                                             <a href="study.html" class="dropdown-item">Visit& Tourst Visa</a>
                                             <a href="training.html" class="dropdown-item">Work & Residence Visa</a>
                                             <a href="training.html" class="dropdown-item">Business Visa</a>
