--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                                     </div>
                                     <!-- </div> -->
                                     
-                                        <a href="#" class="dropdown-item" data-toggle="dropdown">Visas</a>
+                                        <a href="#" class="dropdown-item" data-toggle="dropdown">Visa</a>
                                         <div class="dropdown-menu position-relative bg-secondary border-0 rounded-0 w-100 m-0">
                                             <a href="#" class="dropdown-item">Education Visa</a>
                                             <a href="#" class="dropdown-item">Business Visa</a>
