update index page
update index page

--- a/training.html
+++ b/training.html
@@ -399,7 +399,7 @@
                             <div class="col-md-6 col-lg-6 text-center team mb-4">
                                 <div class="team-item rounded overflow-hidden mb-2">
                                     <div class="team-img position-relative">
-                                        <img class="img-fluid" src="img/team/team-1.jpg" alt="">
+                                        <img class="img-fluid" src="img/training/training-1.jpg" alt="">
                                         <div class="team-social">
                                             <button class=" btn btn-outline-light mx-1">More Details</button>
                                             <!-- <a class="btn btn-outline-light btn-square mx-1" href="#"><i
@@ -419,9 +419,9 @@
                             <div class="col-md-6 col-lg-6 text-center team mb-4">
                                 <div class="team-item rounded overflow-hidden mb-2">
                                     <div class="team-img position-relative">
-                                        <img class="img-fluid" src="img/team/team-2.jpg" alt="">
+                                        <img class="img-fluid" src="img/training/training-2.jpg" alt="">
                                         <div class="team-social">
-                                            <button class=" btn btn-outline-light mx-1">More Details</button>
+                                            <button class="btn btn-outline-light mx-1"><a href="stock-market.html">More Details</a></button>
                                             <!-- <a class="btn btn-outline-light btn-square mx-1" href="#"><i
                                                     class="fab fa-twitter"></i></a>
                                             <a class="btn btn-outline-light btn-square mx-1" href="#"><i
