update training & Index
update training & Index

--- a/training.html
+++ b/training.html
@@ -193,7 +193,7 @@
 
 
     <!-- Detail Start -->
-    <div class="container-fluid py-5">
+    <div class="container-fluid py-0">
         <div class="container py-5">
             <div class="row">
                 <div class="col-lg-8">
@@ -272,7 +272,7 @@
 
                 </div>
 
-                <div class="col-lg-4 mt-5 mt-lg-0">
+                <div class="col-lg-4 mt-5 mt-lg-0 mb-5 py-5 px-4">
                     <!-- Author Bio -->
                     <!-- <div class="d-flex flex-column text-center bg-dark rounded mb-5 py-5 px-4">
                         <img src="img/user.jpg" class="img-fluid rounded-circle mx-auto mb-3" style="width: 100px;">
@@ -349,7 +349,7 @@
                     </div>
 
                     <!-- Tag Cloud -->
-                    <div class="mb-5">
+                    <div class="mb-4">
                         <h3 class="text-uppercase mb-4" style="letter-spacing: 5px;">Tag Cloud</h3>
                         <div class="d-flex flex-wrap m-n1">
                             <a href="" class="btn btn-outline-primary m-1">Design</a>
@@ -401,7 +401,9 @@
                                     <div class="team-img position-relative">
                                         <img class="img-fluid" src="img/training/training-1.jpg" alt="">
                                         <div class="team-social">
-                                            <button class=" btn btn-outline-light mx-1">More Details</button>
+                                            <a class="btn btn-outline-light mx-1" href="stock-market.html"
+                                                role="button">More Details</a>
+                                            <!-- <button class=" btn btn-outline-light mx-1">More Details</button> -->
                                             <!-- <a class="btn btn-outline-light btn-square mx-1" href="#"><i
                                                     class="fab fa-twitter"></i></a>
                                             <a class="btn btn-outline-light btn-square mx-1" href="#"><i
@@ -411,8 +413,8 @@
                                         </div>
                                     </div>
                                     <div class="bg-secondary p-4">
-                                        <h5>Jhon Doe</h5>
-                                        <p class="m-0">Stock Market</p>
+                                        <h5 class="m-0">Stock Market</h5>
+                                        <!-- <p class="m-0">Stock Market</p> -->
                                     </div>
                                 </div>
                             </div>
@@ -421,7 +423,9 @@
                                     <div class="team-img position-relative">
                                         <img class="img-fluid" src="img/training/training-2.jpg" alt="">
                                         <div class="team-social">
-                                            <button class="btn btn-outline-light mx-1"><a href="stock-market.html">More Details</a></button>
+                                            <a class="btn btn-outline-light mx-1" href="software-training.html"
+                                                role="button">More Details</a>
+                                            <!-- <button class="btn btn-outline-light mx-1"></button> -->
                                             <!-- <a class="btn btn-outline-light btn-square mx-1" href="#"><i
                                                     class="fab fa-twitter"></i></a>
                                             <a class="btn btn-outline-light btn-square mx-1" href="#"><i
@@ -431,8 +435,8 @@
                                         </div>
                                     </div>
                                     <div class="bg-secondary p-4">
-                                        <h5>Jhon Doe</h5>
-                                        <p class="m-0">Software Training</p>
+                                        <h5 class="m-0">Software Training</h5>
+                                        <!-- <p class="m-0">Software Training</p> -->
                                     </div>
                                 </div>
                             </div>
