--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
                                         <a href="#" class="dropdown-item" data-toggle="dropdown">Education<i
                                                 class="fa fa-angle-down float-right mt-1"></i></a>
                                         <div class="dropdown-item position-relative bg-secondary rounded-0 w-100 m-0">
-                                            <a href="#" class="dropdown-item">Study</a>
-                                            <a href="#" class="dropdown-item">Training</a>
+                                            <a href="study.html" class="dropdown-item">Study</a>
+                                            <a href="training.html" class="dropdown-item">Training</a>
                                         </div>
                                     </div>
 
@@ -133,9 +133,9 @@
                                                 class="fa fa-angle-down float-right mt-1"></i></a>
                                         <div
                                             class="dropdown-item position-relative bg-secondary border-0 rounded-0 w-100 m-0">
-                                            <a href="" class="dropdown-item">Visit & Tourist Visa</a>
-                                            <a href="" class="dropdown-item">Work Visa</a>
-                                            <a href="" class="dropdown-item">Business Visa</a>
+                                            <a href="visit-visa.html" class="dropdown-item">Visit & Tourist Visa</a>
+                                            <a href="work-visa.html" class="dropdown-item">Work Visa</a>
+                                            <a href="business-visa.html" class="dropdown-item">Business Visa</a>
                                         </div>
                                     </div>
 
