--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 <nav class="navbar navbar-expand-lg bg-light navbar-light py-3 py-lg-0 px-0">
                     <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                         <div class="navbar-nav py-0">
-                            <a href="index.html" class="nav-item nav-link">Home</a>
+                            <a href="index.html" class="nav-item nav-link active">Home</a>
                             <a href="about.html" class="nav-item nav-link">About</a>
                             <div class="nav-item dropdown">
                                 <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Services</a>
@@ -122,8 +122,8 @@
                                         <a href="#" class="dropdown-item" data-toggle="dropdown">Education<i
                                                 class="fa fa-angle-down float-right mt-1"></i></a>
                                         <div class="dropdown-item position-relative bg-secondary rounded-0 w-100 m-0">
-                                            <a href="#" class="dropdown-item">Study</a>
-                                            <a href="#" class="dropdown-item">Training</a>
+                                            <a href="study.html" class="dropdown-item">Study</a>
+                                            <a href="training.html" class="dropdown-item">Training</a>
                                         </div>
                                     </div>
 
