--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 <body>
     <!-- Topbar Start -->
     <div class="container-fluid d-none d-lg-block">
-        <div class="row align-items-center py-4 px-xl-4">
+        <div class="row align-items-center py-2 px-xl-5">
             <div class="col-lg-3">
                 <a href="index.html" class="text-decoration-none">
                     <h1 class="m-0"><img src="img/resources/logo - Copy.png" style="width: 100px;
@@ -144,20 +144,36 @@
                                         <a href="#" class="dropdown-item" data-toggle="dropdown">Tour & Travells<i
                                                 class="fa fa-angle-down float-right mt-1"></i></a>
                                         <div
-                                            class="dropdown-item position-absolute bg-secondary border-0 rounded-0 w-100 m-0">
-                                            <a href="" class="dropdown-item">Thailand</a>
-                                            <a href="" class="dropdown-item">Singapoor</a>
+                                            class="dropdown-item position-relative bg-secondary border-0 rounded-0 w-100 m-0">
+                                            <a href="#" class="dropdown-item">Thailand</a>
+                                            <a href="#" class="dropdown-item">Singapoor</a>
                                         </div>
                                     </div>
                                 </div>
                             </div>
+
                             <div class="nav-item dropdown">
+                                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">services</a>
+                                <div class="dropdown-menu rounded-0 m-0">
+                                    <!-- <a href="blog.html" class="dropdown-item">Education</a> -->
+                                    <div class="dropdown-submenu">
+                                        <a href="#" class="dropdown-item dropdown-toggle ">Education</a>
+                                        <div class="dropdown-menu position-relative bg-secondary rounded-0 m-0">
+                                            <a href="blog.html" class="dropdown-item">Study</a>
+                                            <a href="blog.html" class="dropdown-item">Training</a>
+                                        </div>
+                                    </div>
+                                    <a href="single.html" class="dropdown-item">Blog Detail</a>
+                                </div>
+                            </div>
+                            
+                            <!-- <div class="nav-item dropdown">
                                 <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Blog</a>
                                 <div class="dropdown-menu rounded-0 m-0">
                                     <a href="blog.html" class="dropdown-item">Blog Grid</a>
                                     <a href="single.html" class="dropdown-item">Blog Detail</a>
                                 </div>
-                            </div>
+                            </div> -->
                             <a href="contact.html" class="nav-item nav-link">Contact</a>
                         </div>
                     </div>
