--- a/about.html
+++ b/about.html
@@ -73,8 +73,8 @@
                 <nav class="navbar navbar-expand-lg bg-light navbar-light py-3 py-lg-0 px-0">
                     <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                         <div class="navbar-nav py-0">
-                            <a href="index.html" class="nav-item nav-link active">Home</a>
-                            <a href="about.html" class="nav-item nav-link">About</a>
+                            <a href="index.html" class="nav-item nav-link">Home</a>
+                            <a href="about.html" class="nav-item nav-link active">About</a>
                             <div class="nav-item dropdown">
                                 <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Services</a>
                                 <div class="dropdown-menu rounded-0 m-0">
@@ -94,9 +94,9 @@
                                                 class="fa fa-angle-down float-right mt-1"></i></a>
                                         <div
                                             class="dropdown-item position-relative bg-secondary border-0 rounded-0 w-100 m-0">
-                                            <a href="" class="dropdown-item">Visit & Tourist Visa</a>
-                                            <a href="" class="dropdown-item">Work Visa</a>
-                                            <a href="" class="dropdown-item">Business Visa</a>
+                                            <a href="visit-visa.html" class="dropdown-item">Visit & Tourist Visa</a>
+                                            <a href="work-visa.html" class="dropdown-item">Work Visa</a>
+                                            <a href="business-visa.html" class="dropdown-item">Business Visa</a>
                                         </div>
                                     </div>
 
@@ -112,13 +112,13 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="nav-item dropdown">
+                            <!-- <div class="nav-item dropdown">
                                 <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Blog</a>
                                 <div class="dropdown-menu rounded-0 m-0">
                                     <a href="blog.html" class="dropdown-item">Blog Grid</a>
                                     <a href="single.html" class="dropdown-item">Blog Detail</a>
                                 </div>
-                            </div>
+                            </div> -->
                             <a href="contact.html" class="nav-item nav-link">Contact</a>
                         </div>
                     </div>
