--- a/visit-visa.html
+++ b/visit-visa.html
@@ -129,8 +129,8 @@
                                         <a href="#" class="dropdown-item" data-toggle="dropdown">Education<i
                                                 class="fa fa-angle-down float-right mt-1"></i></a>
                                         <div class="dropdown-item position-relative bg-secondary rounded-0 w-100 m-0">
-                                            <a href="#" class="dropdown-item">Study</a>
-                                            <a href="#" class="dropdown-item">Training</a>
+                                            <a href="study.html" class="dropdown-item">Study</a>
+                                            <a href="training.html" class="dropdown-item">Training</a>
                                         </div>
                                     </div>
 
@@ -140,9 +140,9 @@
                                                 class="fa fa-angle-down float-right mt-1"></i></a>
                                         <div
                                             class="dropdown-item position-relative bg-secondary border-0 rounded-0 w-100 m-0">
-                                            <a href="" class="dropdown-item">Visit & Tourist Visa</a>
-                                            <a href="" class="dropdown-item">Work Visa</a>
-                                            <a href="" class="dropdown-item">Business Visa</a>
+                                            <a href="visit-visa.html" class="dropdown-item active">Visit & Tourist Visa</a>
+                                            <a href="work-visa.html" class="dropdown-item">Work Visa</a>
+                                            <a href="business-visa.html" class="dropdown-item">Business Visa</a>
                                         </div>
                                     </div>
 
@@ -158,13 +158,13 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="nav-item dropdown">
+                            <!-- <div class="nav-item dropdown">
                                 <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Blog</a>
                                 <div class="dropdown-menu rounded-0 m-0">
                                     <a href="blog.html" class="dropdown-item">Blog Grid</a>
                                     <a href="single.html" class="dropdown-item">Blog Detail</a>
                                 </div>
-                            </div>
+                            </div> -->
                             <a href="contact.html" class="nav-item nav-link">Contact</a>
                         </div>
                     </div>
